eagle: Arch2.0. Add service management

--- a/eagle/src/pwrapi_adaptor/pwrapi/readme
+++ b/eagle/src/pwrapi_adaptor/pwrapi/readme
@@ -1,5 +1,5 @@
 The pwrapi_adaptor module depends on powerapi development kits.
-Before building eagle, you should the powerapi development kits to this directory, including:
+Before building eagle, you should copy the powerapi development kits to this directory, including:
 
 libpwrapi.so
 powerapi.h
